; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_patch_parse.c_git_patch_parse_ctx_init.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_patch_parse.c_git_patch_parse_ctx_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32, i32 }

@GIT_PATCH_OPTIONS_INIT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.TYPE_6__* @git_patch_parse_ctx_init(i8* %0, i64 %1, i32* %2) #0 {
  %4 = alloca %struct.TYPE_6__*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32*, align 8
  %8 = alloca %struct.TYPE_6__*, align 8
  %9 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i64 %1, i64* %6, align 8
  store i32* %2, i32** %7, align 8
  %10 = load i32, i32* @GIT_PATCH_OPTIONS_INIT, align 4
  store i32 %10, i32* %9, align 4
  %11 = call %struct.TYPE_6__* @git__calloc(i32 1, i32 8)
  store %struct.TYPE_6__* %11, %struct.TYPE_6__** %8, align 8
  %12 = icmp eq %struct.TYPE_6__* %11, null
  br i1 %12, label %13, label %14

13:                                               ; preds = %3
  store %struct.TYPE_6__* null, %struct.TYPE_6__** %4, align 8
  br label %40

14:                                               ; preds = %3
  %15 = load %struct.TYPE_6__*, %struct.TYPE_6__** %8, align 8
  %16 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %15, i32 0, i32 1
  %17 = load i8*, i8** %5, align 8
  %18 = load i64, i64* %6, align 8
  %19 = call i64 @git_parse_ctx_init(i32* %16, i8* %17, i64 %18)
  %20 = icmp slt i64 %19, 0
  br i1 %20, label %21, label %24

21:                                               ; preds = %14
  %22 = load %struct.TYPE_6__*, %struct.TYPE_6__** %8, align 8
  %23 = call i32 @git__free(%struct.TYPE_6__* %22)
  store %struct.TYPE_6__* null, %struct.TYPE_6__** %4, align 8
  br label %40

24:                                               ; preds = %14
  %25 = load i32*, i32** %7, align 8
  %26 = icmp ne i32* %25, null
  br i1 %26, label %27, label %32

27:                                               ; preds = %24
  %28 = load %struct.TYPE_6__*, %struct.TYPE_6__** %8, align 8
  %29 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %28, i32 0, i32 0
  %30 = load i32*, i32** %7, align 8
  %31 = call i32 @memcpy(i32* %29, i32* %30, i32 4)
  br label %36

32:                                               ; preds = %24
  %33 = load %struct.TYPE_6__*, %struct.TYPE_6__** %8, align 8
  %34 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %33, i32 0, i32 0
  %35 = call i32 @memcpy(i32* %34, i32* %9, i32 4)
  br label %36

36:                                               ; preds = %32, %27
  %37 = load %struct.TYPE_6__*, %struct.TYPE_6__** %8, align 8
  %38 = call i32 @GIT_REFCOUNT_INC(%struct.TYPE_6__* %37)
  %39 = load %struct.TYPE_6__*, %struct.TYPE_6__** %8, align 8
  store %struct.TYPE_6__* %39, %struct.TYPE_6__** %4, align 8
  br label %40

40:                                               ; preds = %36, %21, %13
  %41 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  ret %struct.TYPE_6__* %41
}

declare dso_local %struct.TYPE_6__* @git__calloc(i32, i32) #1

declare dso_local i64 @git_parse_ctx_init(i32*, i8*, i64) #1

declare dso_local i32 @git__free(%struct.TYPE_6__*) #1

declare dso_local i32 @memcpy(i32*, i32*, i32) #1

declare dso_local i32 @GIT_REFCOUNT_INC(%struct.TYPE_6__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
